fixed z-index issue

--- a/app/assets/stylesheets/components/article_index.scss
+++ b/app/assets/stylesheets/components/article_index.scss
@@ -116,7 +116,7 @@
     left: 0px;
     display: flex;
     color: rgb(51, 51, 51);
-    z-index: 100;
+    z-index: 10;
     cursor: pointer;
     
     p {
