--- a/app/assets/stylesheets/components/main_nav.scss
+++ b/app/assets/stylesheets/components/main_nav.scss
@@ -4,7 +4,7 @@
     width: 100%;
     top: 0px;
     left: 0px;
-    z-index: 2;
+    z-index: 100;
     border-bottom: 1px solid rgb(224, 224, 224);
     background-color: rgb(255, 255, 255);
 }
